--- a/src/EDB.BackofficeUI/Views/Shared/_Layout.cshtml
+++ b/src/EDB.BackofficeUI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@inject IHttpContextAccessor HttpContextAccessor
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -28,11 +29,11 @@
                 <ul class="navbar-nav ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/Home/Index">Home</a></li>
 
-                    @if (User.IsInRole("Admin"))
+                @*    @if (User.IsInRole("Admin"))
                     {
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/Admin/Admin/Index">Admin Paneli</a></li>
-                    }
-                    @if ()
+                    }*@
+                    @if (HttpContextAccessor.HttpContext.Session.GetString("UserName") != null)
                     {
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/Account/LogOut">logout</a></li>
                     }
