Admin controller updated

--- a/src/EDB.BackofficeUI/Views/Shared/_Layout.cshtml
+++ b/src/EDB.BackofficeUI/Views/Shared/_Layout.cshtml
@@ -29,10 +29,10 @@
                 <ul class="navbar-nav ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/Home/Index">Home</a></li>
 
-                @*    @if (User.IsInRole("Admin"))
+                    @if (HttpContextAccessor.HttpContext.Session.GetString("UserRoles") == "Admin")
                     {
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/Admin/Admin/Index">Admin Paneli</a></li>
-                    }*@
+                    }
                     @if (HttpContextAccessor.HttpContext.Session.GetString("UserName") != null)
                     {
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/Account/LogOut">logout</a></li>
