--- a/src/EDB.BackofficeUI/Views/Shared/AdminLayout.cshtml
+++ b/src/EDB.BackofficeUI/Views/Shared/AdminLayout.cshtml
@@ -310,8 +310,8 @@
                 <!-- sidebar menu start-->
                 <ul class="sidebar-menu">
                     <li>
-                        <a href="/Admin/AdminArticle/Index">
-                            <span>Makaleler</span>
+                        <a href="/Admin/AdminAuthors/Index">
+                            <span>Yazarlar</span>
                         </a>
                     </li>
                     <li>
